Modal size increased a bit to ensure graph isn't cut off at end

--- a/Hotspotter/client/fileView/fileView.css
+++ b/Hotspotter/client/fileView/fileView.css
@@ -35,5 +35,5 @@
 }
 
 #graphModal .modal-dialog {
-    width: 75%;
+    width: 80%;
 }
